# yappie-linux

./: .gitignore  PKGBUILD  README.md  config.example  config.example.toml  install.sh  meson.build  meson_options.txt  uninstall.sh  yappie.install
data/: yappied.service
docs/: rework-design.md
src/cli/: main.c
src/common/: protocol.h  version.h
src/daemon/: api_backend.c  audio.c  audio.h  backend.c  backend.h  config.c  config.h  ipc.c  ipc.h  local_backend.c  local_backend.h  main.c  model.c  model.h  paste.c  paste.h  state.c  state.h  tcp_backend.c  wav.c  wav.h
subprojects/: cjson.wrap  tomlc99.wrap
subprojects/packagefiles/cjson/: meson.build
subprojects/packagefiles/tomlc99/: meson.build
